[gd_scene load_steps=15 format=2]

[ext_resource path="res://tscn/Dialog.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/PreferencesDialog.gd" type="Script" id=2]
[ext_resource path="res://res/Helvetica_normal.tres" type="DynamicFont" id=3]
[ext_resource path="res://res/buttons/default_red_button_hover.tres" type="StyleBox" id=4]
[ext_resource path="res://res/buttons/default_red_button_pressed.tres" type="StyleBox" id=5]
[ext_resource path="res://res/buttons/default_red_button_normal.tres" type="StyleBox" id=6]
[ext_resource path="res://res/Helvetica_bold.tres" type="DynamicFont" id=7]
[ext_resource path="res://res/panels/panel_as_container.tres" type="StyleBox" id=8]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=6]

[node name="PreferencesDialog" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Panel" parent="." index="1"]
margin_top = -332.0
margin_bottom = 330.0

[node name="Title" parent="Panel/VBoxContainer/Head" index="0"]
text = "Préférences"

[node name="Body" parent="Panel/VBoxContainer" index="1"]
margin_bottom = 602.0

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer/Body" index="0"]
margin_left = 13.0
margin_top = 16.0
margin_right = 786.0
margin_bottom = 541.0
size_flags_horizontal = 3

[node name="LeftPanel" type="Panel" parent="Panel/VBoxContainer/Body/HBoxContainer" index="0"]
margin_right = 220.0
margin_bottom = 525.0
rect_min_size = Vector2( 220, 525 )
custom_styles/panel = ExtResource( 8 )

[node name="TreeButtonsContainer" type="VBoxContainer" parent="Panel/VBoxContainer/Body/HBoxContainer/LeftPanel" index="0"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -95.0
margin_top = -252.5
margin_right = 95.0
margin_bottom = 252.5
size_flags_horizontal = 0
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LessonsBtn" type="Button" parent="Panel/VBoxContainer/Body/HBoxContainer/LeftPanel/TreeButtonsContainer" index="0"]
margin_right = 190.0
margin_bottom = 19.0
custom_colors/font_color = Color( 0.196078, 0.196078, 0.196078, 1 )
custom_colors/font_color_hover = Color( 0.305882, 0.305882, 0.305882, 1 )
custom_colors/font_color_pressed = Color( 0.305882, 0.305882, 0.305882, 1 )
custom_fonts/font = ExtResource( 3 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 7 )
text = "Cours"
align = 0

[node name="WindowBtn" type="Button" parent="Panel/VBoxContainer/Body/HBoxContainer/LeftPanel/TreeButtonsContainer" index="1"]
margin_top = 23.0
margin_right = 190.0
margin_bottom = 42.0
custom_colors/font_color = Color( 0.196078, 0.196078, 0.196078, 1 )
custom_colors/font_color_hover = Color( 0.305882, 0.305882, 0.305882, 1 )
custom_colors/font_color_pressed = Color( 0.305882, 0.305882, 0.305882, 1 )
custom_fonts/font = ExtResource( 3 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
text = "Fenêtres"
align = 0

[node name="PreferencesBtn" type="Button" parent="Panel/VBoxContainer/Body/HBoxContainer/LeftPanel/TreeButtonsContainer" index="2"]
margin_top = 46.0
margin_right = 190.0
margin_bottom = 65.0
custom_colors/font_color = Color( 0.196078, 0.196078, 0.196078, 1 )
custom_colors/font_color_hover = Color( 0.305882, 0.305882, 0.305882, 1 )
custom_colors/font_color_pressed = Color( 0.305882, 0.305882, 0.305882, 1 )
custom_fonts/font = ExtResource( 3 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
text = "Préférences"
align = 0

[node name="SaveLoadBtn" type="Button" parent="Panel/VBoxContainer/Body/HBoxContainer/LeftPanel/TreeButtonsContainer" index="3"]
margin_top = 69.0
margin_right = 190.0
margin_bottom = 88.0
custom_colors/font_color = Color( 0.196078, 0.196078, 0.196078, 1 )
custom_colors/font_color_hover = Color( 0.305882, 0.305882, 0.305882, 1 )
custom_colors/font_color_pressed = Color( 0.305882, 0.305882, 0.305882, 1 )
custom_fonts/font = ExtResource( 3 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
text = "Sauvegardes et chargements"
align = 0

[node name="MarginCenter" type="MarginContainer" parent="Panel/VBoxContainer/Body/HBoxContainer" index="1"]
margin_left = 224.0
margin_right = 244.0
margin_bottom = 525.0
rect_min_size = Vector2( 20, 0 )

[node name="RightPanel" type="Control" parent="Panel/VBoxContainer/Body/HBoxContainer" index="2"]
margin_left = 248.0
margin_right = 773.0
margin_bottom = 525.0
rect_min_size = Vector2( 525, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LessonsBox" type="VBoxContainer" parent="Panel/VBoxContainer/Body/HBoxContainer/RightPanel" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LessonsTitle" type="Label" parent="Panel/VBoxContainer/Body/HBoxContainer/RightPanel/LessonsBox" index="0"]
margin_right = 525.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
custom_colors/font_color = Color( 0.196078, 0.196078, 0.196078, 1 )
custom_fonts/font = ExtResource( 7 )
text = "Cours"

[node name="CardIndexTop" type="HBoxContainer" parent="Panel/VBoxContainer/Body/HBoxContainer/RightPanel/LessonsBox" index="1"]
margin_top = 44.0
margin_right = 525.0
margin_bottom = 68.0
custom_constants/separation = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CardIndexTopCheckBox" type="CheckBox" parent="Panel/VBoxContainer/Body/HBoxContainer/RightPanel/LessonsBox/CardIndexTop" index="0"]
margin_right = 24.0
margin_bottom = 24.0

[node name="CardIndexTopLabel" type="Label" parent="Panel/VBoxContainer/Body/HBoxContainer/RightPanel/LessonsBox/CardIndexTop" index="1"]
margin_left = 29.0
margin_top = 5.0
margin_right = 334.0
margin_bottom = 19.0
custom_colors/font_color = Color( 0.196078, 0.196078, 0.196078, 1 )
text = "Afficher le dernier cours créé en haut de la liste"

[node name="TDSameColorCM" type="HBoxContainer" parent="Panel/VBoxContainer/Body/HBoxContainer/RightPanel/LessonsBox" index="2"]
margin_top = 72.0
margin_right = 525.0
margin_bottom = 96.0
custom_constants/separation = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TDSameColorCMCheckBox" type="CheckBox" parent="Panel/VBoxContainer/Body/HBoxContainer/RightPanel/LessonsBox/TDSameColorCM" index="0"]
margin_right = 24.0
margin_bottom = 24.0
pressed = true

[node name="TDSameColorCMLabel" type="Label" parent="Panel/VBoxContainer/Body/HBoxContainer/RightPanel/LessonsBox/TDSameColorCM" index="1"]
margin_left = 29.0
margin_top = 5.0
margin_right = 291.0
margin_bottom = 19.0
custom_colors/font_color = Color( 0.196078, 0.196078, 0.196078, 1 )
text = "Les TD ont la même couleur que leur CM"

[node name="MarginContainer" type="MarginContainer" parent="Panel/VBoxContainer/Body/HBoxContainer/RightPanel/LessonsBox" index="3"]
margin_top = 100.0
margin_right = 525.0
margin_bottom = 115.0
rect_min_size = Vector2( 0, 15 )

[node name="EnableDefaultLessonTime" type="HBoxContainer" parent="Panel/VBoxContainer/Body/HBoxContainer/RightPanel/LessonsBox" index="4"]
margin_top = 119.0
margin_right = 525.0
margin_bottom = 144.0
rect_min_size = Vector2( 0, 25 )
custom_constants/separation = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnableDefaultLessonTimeCheckBox" type="CheckBox" parent="Panel/VBoxContainer/Body/HBoxContainer/RightPanel/LessonsBox/EnableDefaultLessonTime" index="0"]
visible = false
margin_right = 24.0
margin_bottom = 24.0

[node name="EnableDefaultLessonTimeLabel" type="Label" parent="Panel/VBoxContainer/Body/HBoxContainer/RightPanel/LessonsBox/EnableDefaultLessonTime" index="1"]
margin_top = 5.0
margin_right = 447.0
margin_bottom = 19.0
custom_colors/font_color = Color( 0.196078, 0.196078, 0.196078, 1 )
text = "Définir un temps par défaut pour les nouveaux CM et les nouveaux TD"

[node name="CMDefaultTime" type="HBoxContainer" parent="Panel/VBoxContainer/Body/HBoxContainer/RightPanel/LessonsBox" index="5"]
margin_top = 148.0
margin_right = 525.0
margin_bottom = 168.0
custom_constants/separation = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Panel/VBoxContainer/Body/HBoxContainer/RightPanel/LessonsBox/CMDefaultTime" index="0"]
margin_right = 50.0
margin_bottom = 20.0
rect_min_size = Vector2( 50, 0 )

[node name="CMDefaultTimeLabel" type="Label" parent="Panel/VBoxContainer/Body/HBoxContainer/RightPanel/LessonsBox/CMDefaultTime" index="1"]
margin_left = 55.0
margin_top = 3.0
margin_right = 217.0
margin_bottom = 17.0
custom_colors/font_color = Color( 0.196078, 0.196078, 0.196078, 1 )
text = "Temps par défaut des CM"

[node name="CMDefaultTimeHourOptionButton" type="OptionButton" parent="Panel/VBoxContainer/Body/HBoxContainer/RightPanel/LessonsBox/CMDefaultTime" index="2"]
margin_left = 222.0
margin_right = 259.0
margin_bottom = 20.0
text = "0"
items = [ "0", null, false, 0, null, "1", null, false, 1, null, "2", null, false, 2, null, "3", null, false, 3, null, "4", null, false, 4, null, "5", null, false, 5, null, "6", null, false, 6, null, "7", null, false, 7, null, "8", null, false, 8, null ]
selected = 0

[node name="hour" type="Label" parent="Panel/VBoxContainer/Body/HBoxContainer/RightPanel/LessonsBox/CMDefaultTime" index="3"]
margin_left = 264.0
margin_top = 3.0
margin_right = 272.0
margin_bottom = 17.0
custom_colors/font_color = Color( 0.196078, 0.196078, 0.196078, 1 )
text = "h"

[node name="CMDefaultTimeMinutesOptionButton" type="OptionButton" parent="Panel/VBoxContainer/Body/HBoxContainer/RightPanel/LessonsBox/CMDefaultTime" index="4"]
margin_left = 277.0
margin_right = 322.0
margin_bottom = 20.0
text = "00"
items = [ "00", null, false, 0, null, "30", null, false, 1, null ]
selected = 0

[node name="TDDefaultTime" type="HBoxContainer" parent="Panel/VBoxContainer/Body/HBoxContainer/RightPanel/LessonsBox" index="6"]
margin_top = 172.0
margin_right = 525.0
margin_bottom = 192.0
custom_constants/separation = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Panel/VBoxContainer/Body/HBoxContainer/RightPanel/LessonsBox/TDDefaultTime" index="0"]
margin_right = 50.0
margin_bottom = 20.0
rect_min_size = Vector2( 50, 0 )

[node name="TDDefaultTimeLabel" type="Label" parent="Panel/VBoxContainer/Body/HBoxContainer/RightPanel/LessonsBox/TDDefaultTime" index="1"]
margin_left = 55.0
margin_top = 3.0
margin_right = 218.0
margin_bottom = 17.0
custom_colors/font_color = Color( 0.196078, 0.196078, 0.196078, 1 )
text = "Temps par défaut des TD "

[node name="TDDefaultTimeHourOptionButton" type="OptionButton" parent="Panel/VBoxContainer/Body/HBoxContainer/RightPanel/LessonsBox/TDDefaultTime" index="2"]
margin_left = 223.0
margin_right = 260.0
margin_bottom = 20.0
text = "0"
items = [ "0", null, false, 0, null, "1", null, false, 1, null, "2", null, false, 2, null, "3", null, false, 3, null, "4", null, false, 4, null, "5", null, false, 5, null, "6", null, false, 6, null, "7", null, false, 7, null, "8", null, false, 8, null ]
selected = 0

[node name="hour" type="Label" parent="Panel/VBoxContainer/Body/HBoxContainer/RightPanel/LessonsBox/TDDefaultTime" index="3"]
margin_left = 265.0
margin_top = 3.0
margin_right = 273.0
margin_bottom = 17.0
custom_colors/font_color = Color( 0.196078, 0.196078, 0.196078, 1 )
text = "h"

[node name="TDDefaultTimeMinutesOptionButton" type="OptionButton" parent="Panel/VBoxContainer/Body/HBoxContainer/RightPanel/LessonsBox/TDDefaultTime" index="4"]
margin_left = 278.0
margin_right = 323.0
margin_bottom = 20.0
text = "00"
items = [ "00", null, false, 0, null, "30", null, false, 1, null ]
selected = 0

[node name="PreferencesBox" type="VBoxContainer" parent="Panel/VBoxContainer/Body/HBoxContainer/RightPanel" index="1"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PreferencesTitle" type="Label" parent="Panel/VBoxContainer/Body/HBoxContainer/RightPanel/PreferencesBox" index="0"]
margin_right = 525.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
custom_colors/font_color = Color( 0.196078, 0.196078, 0.196078, 1 )
custom_fonts/font = ExtResource( 7 )
text = "Préférences"

[node name="OpenFileExplorerBox" type="HBoxContainer" parent="Panel/VBoxContainer/Body/HBoxContainer/RightPanel/PreferencesBox" index="1"]
margin_top = 60.0
margin_right = 525.0
margin_bottom = 80.0
custom_constants/separation = 15

[node name="OpenFileExplorerLabel" type="Label" parent="Panel/VBoxContainer/Body/HBoxContainer/RightPanel/PreferencesBox/OpenFileExplorerBox" index="0"]
margin_top = 3.0
margin_right = 351.0
margin_bottom = 17.0
custom_colors/font_color = Color( 0.196078, 0.196078, 0.196078, 1 )
text = "Ouvir le dossier contenant les fichiers de configuration"
align = 1

[node name="OpenFileExplorerBtn" type="Button" parent="Panel/VBoxContainer/Body/HBoxContainer/RightPanel/PreferencesBox/OpenFileExplorerBox" index="1"]
margin_left = 366.0
margin_right = 418.0
margin_bottom = 20.0
text = "Ouvrir"

[node name="MarginContainer" type="MarginContainer" parent="Panel/VBoxContainer/Body/HBoxContainer/RightPanel/PreferencesBox" index="2"]
margin_top = 100.0
margin_right = 525.0
margin_bottom = 220.0
rect_min_size = Vector2( 0, 120 )

[node name="SetDefaultPreferencesLabel" type="Label" parent="Panel/VBoxContainer/Body/HBoxContainer/RightPanel/PreferencesBox" index="3"]
margin_top = 240.0
margin_right = 525.0
margin_bottom = 254.0
custom_colors/font_color = Color( 0.196078, 0.196078, 0.196078, 1 )
text = "Souhaitez-vous remettre les préférences d'origine ? (Action irréversible)"
align = 1

[node name="SetDefaultPreferencesBtn" type="Button" parent="Panel/VBoxContainer/Body/HBoxContainer/RightPanel/PreferencesBox" index="4"]
margin_left = 217.0
margin_top = 274.0
margin_right = 307.0
margin_bottom = 309.0
rect_min_size = Vector2( 90, 35 )
size_flags_horizontal = 4
size_flags_vertical = 0
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 6 )
custom_styles/normal = ExtResource( 6 )
text = "OUI"

[node name="SaveLoadBox" type="VBoxContainer" parent="Panel/VBoxContainer/Body/HBoxContainer/RightPanel" index="2"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveLoadTitle" type="Label" parent="Panel/VBoxContainer/Body/HBoxContainer/RightPanel/SaveLoadBox" index="0"]
margin_right = 525.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
custom_colors/font_color = Color( 0.196078, 0.196078, 0.196078, 1 )
custom_fonts/font = ExtResource( 7 )
text = "Sauvegardes et chargements"

[node name="AutoSave" type="HBoxContainer" parent="Panel/VBoxContainer/Body/HBoxContainer/RightPanel/SaveLoadBox" index="1"]
margin_top = 44.0
margin_right = 525.0
margin_bottom = 68.0
custom_constants/separation = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AutoSaveCheckBox" type="CheckBox" parent="Panel/VBoxContainer/Body/HBoxContainer/RightPanel/SaveLoadBox/AutoSave" index="0"]
margin_right = 24.0
margin_bottom = 24.0

[node name="AutoSaveLabel" type="Label" parent="Panel/VBoxContainer/Body/HBoxContainer/RightPanel/SaveLoadBox/AutoSave" index="1"]
margin_left = 29.0
margin_top = 5.0
margin_right = 186.0
margin_bottom = 19.0
custom_colors/font_color = Color( 0.196078, 0.196078, 0.196078, 1 )
text = "Sauvegarde automatique"

[node name="AutoSaveWaitTime" type="HBoxContainer" parent="Panel/VBoxContainer/Body/HBoxContainer/RightPanel/SaveLoadBox" index="2"]
margin_top = 72.0
margin_right = 525.0
margin_bottom = 92.0
custom_constants/separation = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginLeft" type="MarginContainer" parent="Panel/VBoxContainer/Body/HBoxContainer/RightPanel/SaveLoadBox/AutoSaveWaitTime" index="0"]
margin_right = 25.0
margin_bottom = 20.0
rect_min_size = Vector2( 25, 0 )

[node name="AutoSaveWaitTimeLabel" type="Label" parent="Panel/VBoxContainer/Body/HBoxContainer/RightPanel/SaveLoadBox/AutoSaveWaitTime" index="1"]
margin_left = 30.0
margin_top = 3.0
margin_right = 259.0
margin_bottom = 17.0
custom_colors/font_color = Color( 0.196078, 0.196078, 0.196078, 1 )
text = "Sauvegarde automatique toutes les "

[node name="AutoSaveWaitTimeOptionButton" type="OptionButton" parent="Panel/VBoxContainer/Body/HBoxContainer/RightPanel/SaveLoadBox/AutoSaveWaitTime" index="2"]
margin_left = 264.0
margin_right = 314.0
margin_bottom = 20.0
rect_min_size = Vector2( 50, 0 )
disabled = true
text = "5"
align = 1
items = [ "5", null, false, 0, null, "10", null, false, 1, null, "15", null, false, 2, null, "20", null, false, 3, null ]
selected = 0

[node name="AutoSaveWaitTimeLabel2" type="Label" parent="Panel/VBoxContainer/Body/HBoxContainer/RightPanel/SaveLoadBox/AutoSaveWaitTime" index="3"]
margin_left = 319.0
margin_top = 3.0
margin_right = 372.0
margin_bottom = 17.0
custom_colors/font_color = Color( 0.196078, 0.196078, 0.196078, 1 )
text = "minutes"

[node name="LastResFileLoaded" type="VBoxContainer" parent="Panel/VBoxContainer/Body/HBoxContainer/RightPanel/SaveLoadBox" index="3"]
margin_top = 96.0
margin_right = 525.0
margin_bottom = 139.0
custom_constants/separation = 5

[node name="LastResFileLoadedLabel" type="Label" parent="Panel/VBoxContainer/Body/HBoxContainer/RightPanel/SaveLoadBox/LastResFileLoaded" index="0"]
margin_right = 525.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0.196078, 0.196078, 0.196078, 1 )
text = "Chemin du dernier fichier ouvert"

[node name="LastResFileLoadedLineEdit" type="LineEdit" parent="Panel/VBoxContainer/Body/HBoxContainer/RightPanel/SaveLoadBox/LastResFileLoaded" index="1"]
margin_top = 19.0
margin_right = 525.0
margin_bottom = 43.0
custom_colors/font_color = Color( 0.6, 0.6, 0.6, 1 )
editable = false
selecting_enabled = false

[node name="WindowBox" type="VBoxContainer" parent="Panel/VBoxContainer/Body/HBoxContainer/RightPanel" index="3"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WindowTitle" type="Label" parent="Panel/VBoxContainer/Body/HBoxContainer/RightPanel/WindowBox" index="0"]
margin_right = 525.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
custom_colors/font_color = Color( 0.196078, 0.196078, 0.196078, 1 )
custom_fonts/font = ExtResource( 7 )
text = "Fenêtres"

[node name="StartWindowSize" type="HBoxContainer" parent="Panel/VBoxContainer/Body/HBoxContainer/RightPanel/WindowBox" index="1"]
margin_top = 44.0
margin_right = 525.0
margin_bottom = 64.0
custom_constants/separation = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartWindowSizeLabel" type="Label" parent="Panel/VBoxContainer/Body/HBoxContainer/RightPanel/WindowBox/StartWindowSize" index="0"]
margin_top = 3.0
margin_right = 210.0
margin_bottom = 17.0
custom_colors/font_color = Color( 0.196078, 0.196078, 0.196078, 1 )
text = "Taille de la fenêtre au démarrage"

[node name="StartWindowSizeOptionButton" type="OptionButton" parent="Panel/VBoxContainer/Body/HBoxContainer/RightPanel/WindowBox/StartWindowSize" index="1"]
margin_left = 215.0
margin_right = 375.0
margin_bottom = 20.0
rect_min_size = Vector2( 160, 0 )
text = "1280x720"
items = [ "1280x720", null, false, 0, null, "1280x1024", null, false, 1, null, "1600x1200", null, false, 2, null, "1680x1050", null, false, 3, null, "1900x1200", null, false, 4, null, "1920x1080", null, false, 5, null ]
selected = 0

[node name="StartWindowSizeWarning" type="Label" parent="Panel/VBoxContainer/Body/HBoxContainer/RightPanel/WindowBox" index="2"]
margin_top = 68.0
margin_right = 525.0
margin_bottom = 118.0
rect_min_size = Vector2( 0, 50 )
custom_colors/font_color = Color( 0.803922, 0.117647, 0.117647, 1 )
text = "Le logiciel doit être redémarré pour que les changements de fenêtre soient pris en compte !"
align = 1
valign = 1
autowrap = true

[node name="Foot" parent="Panel/VBoxContainer" index="2"]
margin_top = 602.0
margin_bottom = 662.0

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer/Foot" index="0"]
margin_left = 245.0
margin_top = 20.0
margin_right = 555.0
margin_bottom = 40.0
custom_constants/separation = 10

[node name="SaveAndCloseBtn" type="Button" parent="Panel/VBoxContainer/Foot/HBoxContainer" index="0"]
margin_right = 150.0
margin_bottom = 20.0
rect_min_size = Vector2( 150, 0 )
focus_mode = 0
enabled_focus_mode = 0
text = "Enregistrer et fermer"

[node name="CloseBtn" type="Button" parent="Panel/VBoxContainer/Foot/HBoxContainer" index="1"]
margin_left = 160.0
margin_right = 310.0
margin_bottom = 20.0
rect_min_size = Vector2( 150, 0 )
focus_mode = 0
enabled_focus_mode = 0
text = "Fermer"

[connection signal="pressed" from="Panel/VBoxContainer/Body/HBoxContainer/LeftPanel/TreeButtonsContainer/LessonsBtn" to="." method="_on_LessonsBtn_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Body/HBoxContainer/LeftPanel/TreeButtonsContainer/WindowBtn" to="." method="_on_WindowBtn_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Body/HBoxContainer/LeftPanel/TreeButtonsContainer/PreferencesBtn" to="." method="_on_PreferencesBtn_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Body/HBoxContainer/LeftPanel/TreeButtonsContainer/SaveLoadBtn" to="." method="_on_SaveLoadBtn_pressed"]
[connection signal="toggled" from="Panel/VBoxContainer/Body/HBoxContainer/RightPanel/LessonsBox/CardIndexTop/CardIndexTopCheckBox" to="." method="_on_CardIndexTopCheckBox_toggled"]
[connection signal="toggled" from="Panel/VBoxContainer/Body/HBoxContainer/RightPanel/LessonsBox/TDSameColorCM/TDSameColorCMCheckBox" to="." method="_on_TDSameColorCMCheckBox_toggled"]
[connection signal="item_selected" from="Panel/VBoxContainer/Body/HBoxContainer/RightPanel/LessonsBox/CMDefaultTime/CMDefaultTimeHourOptionButton" to="." method="_on_CMDefaultTimeHourOptionButton_item_selected"]
[connection signal="item_selected" from="Panel/VBoxContainer/Body/HBoxContainer/RightPanel/LessonsBox/CMDefaultTime/CMDefaultTimeMinutesOptionButton" to="." method="_on_CMDefaultTimeMinutesOptionButton_item_selected"]
[connection signal="item_selected" from="Panel/VBoxContainer/Body/HBoxContainer/RightPanel/LessonsBox/TDDefaultTime/TDDefaultTimeHourOptionButton" to="." method="_on_TDDefaultTimeHourOptionButton_item_selected"]
[connection signal="item_selected" from="Panel/VBoxContainer/Body/HBoxContainer/RightPanel/LessonsBox/TDDefaultTime/TDDefaultTimeMinutesOptionButton" to="." method="_on_TDDefaultTimeMinutesOptionButton_item_selected"]
[connection signal="pressed" from="Panel/VBoxContainer/Body/HBoxContainer/RightPanel/PreferencesBox/OpenFileExplorerBox/OpenFileExplorerBtn" to="." method="_on_OpenFileExplorerBtn_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Body/HBoxContainer/RightPanel/PreferencesBox/SetDefaultPreferencesBtn" to="." method="_on_SetDefaultPreferencesBtn_pressed"]
[connection signal="toggled" from="Panel/VBoxContainer/Body/HBoxContainer/RightPanel/SaveLoadBox/AutoSave/AutoSaveCheckBox" to="." method="_on_AutoSaveCheckBox_toggled"]
[connection signal="item_selected" from="Panel/VBoxContainer/Body/HBoxContainer/RightPanel/SaveLoadBox/AutoSaveWaitTime/AutoSaveWaitTimeOptionButton" to="." method="_on_AutoSaveWaitTimeOptionButton_item_selected"]
[connection signal="item_selected" from="Panel/VBoxContainer/Body/HBoxContainer/RightPanel/WindowBox/StartWindowSize/StartWindowSizeOptionButton" to="." method="_on_StartWindowSizeOptionButton_item_selected"]
[connection signal="pressed" from="Panel/VBoxContainer/Foot/HBoxContainer/SaveAndCloseBtn" to="." method="_on_SaveAndCloseBtn_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Foot/HBoxContainer/CloseBtn" to="." method="_on_CloseBtn_pressed"]
